--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,1 @@
-.battleship-square {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-  }
-  
-  /* Style for the chessboard colors */
-  .battleship-square:nth-child(odd) {
-    background-color: #855E42; /* Light brown color for odd squares */
-  }
-  
-  /* Style for the chessboard colors */
-  .battleship-square:nth-child(even) {
-    background-color: #DDB88C; /* Dark brown color for even squares */
-  }
-  
+@import './styles/board.scss';
