--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,15 +1,14 @@
 .board {
-    grid-template-columns: 120px 120px 120px ;
-    grid-template-rows: 120px 120px 120px 20px;
-    justify-content: center;
-   
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+
 }
 
 .battleship-square {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    background-color: #d9d9d9;
-    border: 1px solid black;
-  }
-  
+  width: 50px;
+  height: 50px;
+  border: 1px solid #999;
+}
