--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -13,6 +13,10 @@
   border-radius: 10px;
   border-color: blue;
   border-width: 2px;
+  text-align: center;
+  text-decoration: #e60909;
+  display: inline-block;
+  font-size: 12px;
 }
 
 .playbutton {
@@ -23,5 +27,6 @@
   text-decoration: none;
   display: inline-block;
   font-size: 12px;
+  
 
 }
