--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,10 +1,16 @@
+body {
+  background-color: #1abc9c;
+}
+
 .board {
   width: 500px;
   height: 500px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
+  background-color: #1abc9c;
 }
+
 
 .battleship-button {
   width: 50px;
@@ -19,14 +25,28 @@
   font-size: 12px;
 }
 
-.playbutton {
- 
-  color: rgb(19, 16, 16);
-  padding: 10px 22px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  
+.battleship-button:hover {
+  background-color: blue;
+}
 
+.playbutton {
+  position: absolute;
+  bottom: center;
+ 
+}
+
+.playbutton:hover {
+  background-color: red;
+}
+
+.header {
+  padding: 1px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
+.header:hover {
+  color: aqua;
 }
