--- a/src/styles/ship.css
+++ b/src/styles/ship.css
@@ -5,3 +5,10 @@
     pointer-events: none;
 }
 
+.computer-choice {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    pointer-events: none;
+}
+
